--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary"><span> NekoCakes </span>
     <button   style=left:200px; mat-raised-button >Tortas</button>
     <button   style="left:500px;" mat-raised-button>Cupcakes</button>
-    <button   style="left:800px;" mat-raised-button>Galletas</button>
+    <button   style="left:800px; background-color: rgb(219, 120, 198);" mat-raised-button>Galletas</button>
 </mat-toolbar>
 
 
