Agrego componente home
Agrego el componente home y varias imagenes en assets, que uso dentro de home.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,7 @@
     <button   style="left:800px; background-color: rgb(219, 120, 198);" mat-raised-button>Galletas</button> 
     </mat-toolbar>
     
-    <app-carousel></app-carousel>
+    <app-home></app-home>
+
+
 
