--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,4 @@
-<mat-toolbar color="primary"><span> NekoCakes </span>
-    <button   style=left:200px; mat-raised-button >Tortas</button>
-    <button   style="left:500px;" mat-raised-button>Cupcakes</button>
-    <button   style="left:800px; background-color: rgb(219, 120, 198);" mat-raised-button>Galletas</button> 
-    </mat-toolbar>
-    
+    <app-header></app-header>
     <app-home></app-home>
 
 
