--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
-<mat-toolbar color="primary" fxFlex><span > NekoCakes </span>
-  <button   class=estilobotones mat-raised-button >Tortas</button>
-  <button   class=estilobotones mat-raised-button>Cupcakes</button>
-  <button   class=estilobotones mat-raised-button>Galletas</button> 
+<mat-toolbar color="primary" fxFlex><span> NekoCakes </span>
+  <button routerLink = "/productos" class=estilobotones mat-raised-button >Tortas</button>
+  <button class=estilobotones mat-raised-button>Cupcakes</button>
+  <button class=estilobotones mat-raised-button>Galletas</button> 
   </mat-toolbar>
   
