creacion de footer y comentarios
agrego el componente footer y varias lineas de comentarios explicativos.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary" fxFlex><span> NekoCakes </span>
-  <button routerLink = "/productos" class=estilobotones mat-raised-button >Tortas</button>
-  <button class=estilobotones mat-raised-button>Cupcakes</button>
-  <button class=estilobotones mat-raised-button>Galletas</button> 
+  <button routerLink = "/productos/tortas" class=estilobotones mat-raised-button >Tortas</button>
+  <button routerLink = "/productos/cupcakes" class=estilobotones mat-raised-button>Cupcakes</button>
+  <button routerLink = "/productos/galletas" class=estilobotones mat-raised-button>Galletas</button> 
   </mat-toolbar>
   
