Cambios en el footer
Agregamos varias rows

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,11 @@
-hola^soy yo, tu viejo amigo el footer
+<div class="container footer" fxLayoutAlign="center center" fxLayout="row wrap" fxLayoutGap="10px">
+    <div fxFlex="100">
+        <div fxLayout="row">
+            <span> Neko Cakes -Logo-</span>
+        </div>
+    </div>
+
+    <div fxLayout="row">
+        <p>© Copyright 2020 NekoClick</p>
+    </div>
+</div>
