Array y muestra en pantalla
Llenando el array y mostrandolo en pantalla con ngif y ngfor.

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,4 +8,10 @@
     <div fxLayout="row">
         <p>© Copyright 2020 NekoClick</p>
     </div>
+
+    <div fxFlex="1px">
+        <div fxLayout="row">
+            <span> contactenos</span>
+        </div>
+    
 </div>
