--- a/src/app/productos/productos.component.html
+++ b/src/app/productos/productos.component.html
@@ -6,23 +6,26 @@
     <!-- la expresion que use abajo es un for each (por cada producto de el array productos me lo va a aguardar en la variable "prod") -->
     <div *ngFor="let prod of productos">
         <br>
-    <mat-card class="example-card">
-        <mat-card-header>
-          <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>{{prod.nombre}}</mat-card-title>
-          <mat-card-subtitle>{{prod.categoria}}</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image src= {{prod.imagen}}>
-        <mat-card-content>
-          <p>
-            {{prod.descripcion}}
-          </p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
-        </mat-card-actions>
-      </mat-card>
-        </div>
+        <mat-grid-list cols="2" rowWidth="400px">
+            <mat-grid-tile>
+                <mat-card class="example-card">
+                    <mat-card-header>
+                        <div mat-card-avatar class="example-header-image"></div>
+                        <mat-card-title>{{prod.nombre}}</mat-card-title>
+                        <mat-card-subtitle>{{prod.categoria}}</mat-card-subtitle>
+                    </mat-card-header>
+                    <img mat-card-image src={{prod.imagen}}>
+                    <mat-card-content>
+                        <p>
+                            {{prod.descripcion}}
+                        </p>
+                    </mat-card-content>
+                    <mat-card-actions>
+                        <button mat-button>LIKE</button>
+                        <button mat-button>SHARE</button>
+                    </mat-card-actions>
+                </mat-card>
+            </mat-grid-tile>
+        </mat-grid-list>
+    </div>
 </div>
-
