Se agregan y arreglan las "Grids" en Productos y Header
Se modifican las grids existentes para que se adapten a lo que muestran en el contenedor Productos, se agrega una grid-list para ordenar los botones de la toolbar en el componente Header.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,9 @@
-<mat-toolbar color="primary" fxFlex><span> NekoCakes </span>
-  <button routerLink = "/productos/tortas" class=estilobotones mat-raised-button >Tortas</button>
-  <button routerLink = "/productos/cupcakes" class=estilobotones mat-raised-button>Cupcakes</button>
-  <button routerLink = "/productos/galletas" class=estilobotones mat-raised-button>Galletas</button> 
-  </mat-toolbar>
-  
+
+  <mat-grid-list class= "tamaño" cols="4" rowHeight= "fit" >
+    <mat-toolbar color="primary">
+    <mat-grid-tile><span>NekoCakes</span></mat-grid-tile>
+    <mat-grid-tile><button routerLink = "/productos/Tortas" class=estilobotones mat-raised-button >Tortas</button></mat-grid-tile>
+    <mat-grid-tile><button routerLink = "/productos/Cupcakes" class=estilobotones mat-raised-button>Cupcakes</button></mat-grid-tile>
+    <mat-grid-tile><button routerLink = "/productos/Galletas" class=estilobotones mat-raised-button>Galletas</button></mat-grid-tile>
+</mat-toolbar>
+</mat-grid-list>
