--- a/src/app/productos/productos.component.scss
+++ b/src/app/productos/productos.component.scss
@@ -1,11 +1,23 @@
 .titulos {
-  font-size: 100px;
-  text-align: center;
-  background: linear-gradient(to right, red, orange, yellow, green, blue);
+  font-size: 50px;
+  display: inline-block;
+  color: #000;
+  background: #fff;
+  mix-blend-mode: multiply;
+  position: relative;
   
- 
-   
- 
+}
+
+.titulos:before {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, red, orange, yellow, green, blue);
+  mix-blend-mode: screen; //<-- atento a esta linea//
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .example-card {
