se agrega background y estilos
agrego imagenes, y estilos de las cards.

--- a/src/app/productos/productos.component.scss
+++ b/src/app/productos/productos.component.scss
@@ -1,3 +1,4 @@
+
 .titulos {
   font-size: 50px;
   display: inline-block;
@@ -22,9 +23,11 @@
 
 .example-card {
   max-width: 400px;
+  background-color: pink;
+  color: black;
 }
 
 .example-header-image {
-  background-image: url("https://material.angular.io/assets/img/examples/shiba1.jpg");
+  background-image: url("src/assets/Tortas/cake.jpg");
   background-size: cover;
 }
