--- a/src/app/productos/productos.component.html
+++ b/src/app/productos/productos.component.html
@@ -14,10 +14,10 @@
         <mat-card class="example-card">
           <mat-card-header>
             <div mat-card-avatar class="example-header-image"></div>
-            <mat-card-title>{{ prod.nombre }}</mat-card-title>
-            <mat-card-subtitle>{{ prod.categoria }}</mat-card-subtitle>
+            <mat-card-title >{{ prod.nombre }} </mat-card-title>
+            <mat-card-subtitle style="color: blueviolet;">{{ prod.categoria }}</mat-card-subtitle>
           </mat-card-header>
-          <img mat-card-image src="{{ prod.imagen }}" />
+          <img mat-card-image src="{{ prod.imagen }}" style="max-width: 400px; max-height: 400px;"/>
           <mat-card-content>
             <p>
               {{ prod.descripcion }}
