--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,8 @@
 body { 
   padding: 0; 
   margin: 0; 
-  font-family: "Arial Black sans-serif"
-  
+  font-family: "Arial Black sans-serif";
+  background-image: url("assets/Fondos/fondo.jpg");
+  background-size: cover;
+
 }
