Se actualiza carousel y se modifica footer
Se agrega nuevas propiedades al carousel, y se agregan los botones de las redes sociales y se agrega un link para redireccionar al home.

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,17 +1,12 @@
-<div class="container footer" fxLayoutAlign="center center" fxLayout="row wrap" fxLayoutGap="10px">
-    <div fxFlex="100">
-        <div fxLayout="row">
-            <span> Neko Cakes -Logo-</span>
-        </div>
+<div class=" footer" >
+    <div fxLayoutAlign="center"><span>NekoCakes</span></div>
+    <div fxLayoutAlign="center"><span>©Copyrigth 2020</span></div>
+    <div fxLayoutAlign="center" ><span>Contactenos:</span></div>
+    <div fxLayoutAlign="center center">
+        <a mat-icon-button class="btn-google-plus" href="http://google.com/+"><i class="fa fa-google-plus fa-lg">G</i></a>
+        <a mat-icon-button class="btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook fa-lg">F</i></a>
+        <a mat-icon-button class="btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin fa-lg">Ln</i></a>
+        <a mat-icon-button class="btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter fa-lg">Tw</i></a>
+        <a mat-icon-button class="btn-youtube" href="http://youtube.com/"><i class="fa fa-youtube fa-lg">Yt</i></a>
     </div>
-
-    <div fxLayout="row">
-        <p>© Copyright 2020 NekoClick</p>
-    </div>
-
-    <div fxFlex="1px">
-        <div fxLayout="row">
-            <span> contactenos</span>
-        </div>
-    
 </div>
