--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 
   <mat-grid-list class= "tamaño" cols="4" rowHeight= "fit" >
     <mat-toolbar color="primary">
-    <mat-grid-tile><span>NekoCakes</span></mat-grid-tile>
+    <mat-grid-tile><span routerLink = "/home"> NekoCakes</span></mat-grid-tile>
     <mat-grid-tile><button routerLink = "/productos/Tortas" class=estilobotones mat-raised-button >Tortas</button></mat-grid-tile>
     <mat-grid-tile><button routerLink = "/productos/Cupcakes" class=estilobotones mat-raised-button>Cupcakes</button></mat-grid-tile>
     <mat-grid-tile><button routerLink = "/productos/Galletas" class=estilobotones mat-raised-button>Galletas</button></mat-grid-tile>
