--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,9 +1,10 @@
 .tamaño{
 
     max-height: 70px;
+    
 }
 
 .estilobotones{
 
-    background-color: cornflowerblue;
+    background-color: rgb(164, 100, 237);
 }
