--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,24 @@
+<div class="tamaño" fxLayoutAlign="center center">
+  <carousel
+    [images]="images"
+    [height]="700"
+    [width]="1200"
+    [cellWidth]="600"
+    [counter]="true"
+    [autoplay]="true"
+    [autoplayInterval]="2000"
+    [loop]="true"
+  >
+  </carousel>
+</div>
+<div fxLayoutAlign="center center">
+  <img src="src\assets\Logos\Vegan.png" alt="Logo vegan" class="Logos" />
 
-  
- <app-carousel></app-carousel>
- 
- <img src="src\assets\Logos\Vegan.png" alt="Photo of a Shiba Inu" class="Paddingimagenesperro" >
-  
-  <img src="src\assets\Logos\Tacc.png" alt="Photo of a Shiba Inu" class="Paddingimagenesperro" >
+  <img src="src\assets\Logos\Tacc.png" alt="Logo sin Tacc" class="Logos" />
 
-  <img src="src\assets\Logos\sinazucar.jpg" alt="Photo of a Shiba Inu" class="Paddingimagenesperro" >
-  
-  
-  
+  <img
+    src="src\assets\Logos\sinazucar.jpg"
+    alt="Logo sin Azucar"
+    class="Logos"
+  />
+</div>
