--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,8 +1,12 @@
-.Paddingimagenesperro{
-
+.Logos{
   padding-inline-start: 5px;
   padding-inline-end: 5px;
-  max-width: 200px;
+  max-width: 150px;
   padding-block-start: 10px;
   padding-block-end: 10px;
+}
+
+.tamaño{
+  padding-top: 2%;
+  max-height: 50%;
 }
