Modificaciones del tamaño de la imagen
Se adapta el tamaño de las imagenes, y se agrega el ordenamiento por id al buscar los productos.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,14 +11,8 @@
   >
   </carousel>
 </div>
-<div fxLayoutAlign="center center">
-  <img src="src\assets\Logos\Vegan.png" alt="Logo vegan" class="Logos" />
-
-  <img src="src\assets\Logos\Tacc.png" alt="Logo sin Tacc" class="Logos" />
-
-  <img
-    src="src\assets\Logos\sinazucar.jpg"
-    alt="Logo sin Azucar"
-    class="Logos"
-  />
-</div>
+<!-- <div fxLayoutAlign="center center">
+  <img src="src\assets\Logos\Vegan.png" alt="Logo vegan" class="Logos"/>
+  <img src="src\assets\Logos\Tacc.png" alt="Logo sin Tacc" class="Logos"/>
+  <img src="src\assets\Logos\sinazucar.jpg" alt="Logo sin Azucar" class="Logos"/>
+</div> -->
